<?xml version="1.0"?>
<package>
  <name>ps4joy</name>
  <version>0.0.1</version>
  <description>
  This package acts as a bridge between ds4drv and ROS. It allows you to use a 
  PlayStation 4 SIXAXIS controller (AKA Dual Shock 4) controller as a joystick
  in ROS.
  </description>

  <maintainer email="stuart.alldritt@rogers.com">Stuart Alldritt</maintainer>

  <license>LGPL</license>

  <url type="website">http://wiki.ros.org/ps4joy</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
